2010-12-09 Pierre Wieser <pwieser@trychlos.org>

	Document NADataDef and NADataGroup structures.

	* docs/reference/nautilus-actions-docs.xml:
	* docs/reference/nautilus-actions-sections.txt:
	* src/api/na-data-def.h:
	* src/api/na-ifactory-object-data.h:
	* src/api/na-ifactory-object.h:
	* src/core/na-data-def.c:
	* src/core/na-factory-object.c:
	* src/core/na-factory-object.h:
	* src/core/na-ifactory-object.c:
	* src/core/na-ifactory-provider.c: Updated accordingly.

	Document NAIFactoryObject interface.

	* docs/reference/nautilus-actions-sections.txt:
	* src/api/na-ifactory-object.h:
	* src/core/na-ifactory-object.c:
	* src/core/na-ifactory-provider.c: Updated accordingly.

	Document NAIFactoryProvider interface.

	* docs/reference/nautilus-actions-docs.xml:
	* docs/reference/nautilus-actions-sections.txt:
	* src/api/na-ifactory-provider-provider.h:
	* src/api/na-ifactory-provider.h:
	* src/core/na-factory-provider.h:
	* src/core/na-ifactory-provider.c: Updated accordingly.

	Fix NAIExporter reference manual.

	* docs/reference/nautilus-actions-sections.txt:
	* src/api/na-iexporter.h:
	* src/api/na-iimporter.h:
	* src/api/na-iio-provider.h:
	* src/core/na-exporter.c:
	* src/core/na-exporter.h:
	* src/core/na-iexporter.c: Updated accordingly.

	Fix NAIImporter reference manual.

	* docs/reference/.gitignore:
	* docs/reference/nautilus-actions-sections.txt:
	* src/api/na-iimporter.h:
	* src/api/na-iio-provider.h:
	* src/core/na-iimporter.c:
	* src/core/na-iio-provider.c:
	* src/core/na-importer-ask.c:
	* src/core/na-importer-ask.h:
	* src/core/na-importer.c:
	* src/core/na-importer.h: Updated accordingly.

	* docs/reference/nautilus-actions-sections.txt: New file.

2010-12-08 Pierre Wieser <pwieser@trychlos.org>

	Update reference manual for extensions.
	Update reference manual for NAIIOProvider interface.

	* docs/reference/na-about.xml: New file.

2010-12-06 Pierre Wieser <pwieser@trychlos.org>

	* docs/reference/na-compiling.xml: