@@ -61,9 +61,10 @@
     <title>Data Factory Management System</title>
     <xi:include href="xml/ifactory-provider.xml" />
     <xi:include href="xml/ifactory-object.xml" />
+    <xi:include href="xml/data-type.xml"/>
     <xi:include href="xml/data-def.xml"/>
     <xi:include href="xml/ifactory-data.xml"/>
-    <xi:include href="xml/na-data-boxed.xml"/>
+    <xi:include href="xml/data-boxed.xml"/>
   </chapter>
 
   <chapter>
@@ -77,7 +78,6 @@
     <xi:include href="xml/na-object.xml"/>
     <xi:include href="xml/na-object-profile.xml"/>
     <xi:include href="xml/na-iduplicable.xml"/>
-    <xi:include href="xml/na-data-types.xml"/>
     <xi:include href="xml/na-gconf-utils.xml"/>
     <xi:include href="xml/na-core-utils.xml"/>
     <xi:include href="xml/na-object-api.xml"/>
