@@ -41,6 +41,42 @@
 #include <api/na-data-types.h>
 #include <api/na-data-boxed.h>
 
+/**
+ * SECTION: data-boxed
+ * @title: NADataBoxed
+ * @short_description: The elementary data class definition.
+ * @include: nautilus-actions/na-data-boxed.h
+ *
+ * The object which encapsulates an elementary data of #NAIFactoryObject.
+ * A #NADataBoxed object has a type and a value.
+ *
+ * <refsect2>
+ *  <title>Versions historic</title>
+ *  <table>
+ *    <title>Historic of the versions of the #NADataBoxed interface</title>
+ *    <tgroup rowsep="1" colsep="1" align="center" cols="3">
+ *      <colspec colname="na-version" />
+ *      <colspec colname="api-version" />
+ *      <colspec colname="current" />
+ *      <thead>
+ *        <row>
+ *          <entry>&prodname; version</entry>
+ *          <entry>#NADataBoxed interface version</entry>
+ *          <entry></entry>
+ *        </row>
+ *      </thead>
+ *      <tbody>
+ *        <row>
+ *          <entry>since 2.30</entry>
+ *          <entry>1</entry>
+ *          <entry>current version</entry>
+ *        </row>
+ *      </tbody>
+ *    </tgroup>
+ *  </table>
+ * </refsect2>
+ */
+
 /* private class data
  */
 struct NADataBoxedClassPrivate {
@@ -404,6 +440,8 @@ get_data_boxed_fn( guint type )
  * @def: a #NADataDef definition structure.
  *
  * Returns: a #GParamSpec structure.
+ *
+ * Since: Nautilus-Actions v 2.30.
  */
 GParamSpec *
 na_data_boxed_get_param_spec( const NADataDef *def )
@@ -430,6 +468,8 @@ na_data_boxed_get_param_spec( const NADataDef *def )
  * @def: the #NADataDef definition structure for this boxed.
  *
  * Returns: a newly allocated #NADataBoxed.
+ *
+ * Since: Nautilus-Actions v 2.30.
  */
 NADataBoxed *
 na_data_boxed_new( const NADataDef *def )
@@ -451,6 +491,8 @@ na_data_boxed_new( const NADataDef *def )
  *
  * Returns: a pointer to the #NADataDef structure attached to the object.
  * Should never be %NULL.
+ *
+ * Since: Nautilus-Actions v 2.30.
  */
 NADataDef *
 na_data_boxed_get_data_def( const NADataBoxed *boxed )
@@ -475,6 +517,8 @@ na_data_boxed_get_data_def( const NADataBoxed *boxed )
  * @b: the second #NADataBoxed object.
  *
  * Returns: %TRUE if the two boxeds are equal, %FALSE else.
+ *
+ * Since: Nautilus-Actions v 2.30.
  */
 gboolean
 na_data_boxed_are_equal( const NADataBoxed *a, const NADataBoxed *b )
@@ -511,6 +555,8 @@ na_data_boxed_are_equal( const NADataBoxed *a, const NADataBoxed *b )
  *
  * Returns: %TRUE if the #NADataBoxed holds its default value,
  * %FALSE else.
+ *
+ * Since: Nautilus-Actions v 2.30.
  */
 gboolean
 na_data_boxed_is_default( const NADataBoxed *boxed )
@@ -541,6 +587,8 @@ na_data_boxed_is_default( const NADataBoxed *boxed )
  * @boxed: the #NADataBoxed object whose validity is to be checked.
  *
  * Returns: %TRUE if the boxed is valid, %FALSE else.
+ *
+ * Since: Nautilus-Actions v 2.30.
  */
 gboolean
 na_data_boxed_is_valid( const NADataBoxed *boxed )
@@ -571,6 +619,8 @@ na_data_boxed_is_valid( const NADataBoxed *boxed )
  * @boxed: this #NADataBoxed object.
  *
  * Dump the content of @boxed.
+ *
+ * Since: Nautilus-Actions v 2.30.
  */
 void
 na_data_boxed_dump( const NADataBoxed *boxed )
@@ -594,6 +644,8 @@ na_data_boxed_dump( const NADataBoxed *boxed )
  * Changes the #NADataDef a @boxed points to:
  * -> the new type must be the same that the previous one.
  * -> value is unchanged.
+ *
+ * Since: Nautilus-Actions v 2.30.
  */
 void
 na_data_boxed_set_data_def( NADataBoxed *boxed, const NADataDef *new_def )
@@ -614,6 +666,8 @@ na_data_boxed_set_data_def( NADataBoxed *boxed, const NADataDef *new_def )
  *
  * Returns: the value of the @boxed, as a newly allocated string which
  * should be g_free() by the caller.
+ *
+ * Since: Nautilus-Actions v 2.30.
  */
 gchar *
 na_data_boxed_get_as_string( const NADataBoxed *boxed )
@@ -648,6 +702,8 @@ na_data_boxed_get_as_string( const NADataBoxed *boxed )
  * If of type NAFD_TYPE_STRING, NAFD_TYPE_LOCALE_STRING OR
  * NAFD_TYPE_STRING_LIST, then the content is returned in a newly
  * allocated value, which should be released by the caller.
+ *
+ * Since: Nautilus-Actions v 2.30.
  */
 void *
 na_data_boxed_get_as_void( const NADataBoxed *boxed )
@@ -679,6 +735,8 @@ na_data_boxed_get_as_void( const NADataBoxed *boxed )
  * @value: the string to be set.
  *
  * Setup @value with the content of the @boxed.
+ *
+ * Since: Nautilus-Actions v 2.30.
  */
 void
 na_data_boxed_get_as_value( const NADataBoxed *boxed, GValue *value )
@@ -705,6 +763,8 @@ na_data_boxed_get_as_value( const NADataBoxed *boxed, GValue *value )
  * @value: the source #NADataBoxed.
  *
  * Copy value from @value to @boxed.
+ *
+ * Since: Nautilus-Actions v 2.30.
  */
 void
 na_data_boxed_set_from_boxed( NADataBoxed *boxed, const NADataBoxed *value )
@@ -736,6 +796,8 @@ na_data_boxed_set_from_boxed( NADataBoxed *boxed, const NADataBoxed *value )
  * @value: the string to be set.
  *
  * Evaluates the @value and set it to the @boxed.
+ *
+ * Since: Nautilus-Actions v 2.30.
  */
 void
 na_data_boxed_set_from_string( NADataBoxed *boxed, const gchar *value )
@@ -765,6 +827,8 @@ na_data_boxed_set_from_string( NADataBoxed *boxed, const gchar *value )
  * @value: the value whose content is to be got.
  *
  * Evaluates the @value and set it to the @boxed.
+ *
+ * Since: Nautilus-Actions v 2.30.
  */
 void
 na_data_boxed_set_from_value( NADataBoxed *boxed, const GValue *value )
@@ -794,6 +858,8 @@ na_data_boxed_set_from_value( NADataBoxed *boxed, const GValue *value )
  * @value: the value whose content is to be got.
  *
  * Evaluates the @value and set it to the @boxed.
+ *
+ * Since: Nautilus-Actions v 2.30.
  */
 void
 na_data_boxed_set_from_void( NADataBoxed *boxed, const void *value )
